# turboquant-rocm-llamacpp

./: README.md  patch.py  test_output.txt  turboquant_changes.patch
common/jinja/: value.h
docs/: TurboQuant.md
ggml/src/: CMakeLists.txt
ggml/src/ggml-cuda/: cpy.cu  ggml-cuda.cu  set-rows.cu
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/turboquant_rocm/: CMakeLists.txt  llama_tq_hook.cpp  llama_turboquant.cpp  tq_hooks.hip  turboquant.cpp  turboquant.h  turboquant_hip.cuh  turboquant_hip.hip  turboquant_hip_kernel.cpp
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  turboquant_integration.cpp  turboquant_integration.h
